--- a/PortifolioEntrada.html
+++ b/PortifolioEntrada.html
@@ -8,5 +8,27 @@
 <body>
     <h1 style="color: blue;">PORTIFOLIO</h1>
 
-    <p>João Pedro Ferreira de Souza</p>
+    <h3>João Pedro Ferreira de Souza.</h3>
+    <h3>Estudante de Engenharia de Software</h3>
+
 </body>
+
+<style>
+    .column{
+        float: left;
+        width: 25%
+    }
+
+    @media screen and (max-width:900px){
+        .column{
+            width:50px;
+        }
+    }
+
+    @media screen and (max-width:600px){
+        .column{
+            width:50px;
+        }
+    }
+
+</style>
