corpo do portifolio

--- a/PortifolioEntrada.html
+++ b/PortifolioEntrada.html
@@ -1,20 +1,36 @@
+<!DOCTYPE html>
+<html>
+    <meta name="viewport" content="width-device-width, initial-scale-1.0">
 
 <head>
-
-</head>
-
-
-
-<body>
-    <h1 style="color: blue;">PORTIFOLIO</h1>
-
-    <h3>João Pedro Ferreira de Souza.</h3>
-    <br>
-    <h3>Estudante de Engenharia de Software</h3>
-
-</body>
-
+    <title>Portifolio Proficional</title>
 <style>
+    .body{
+        background-color: rgb(245, 136, 47);
+        padding: 20px;
+        font-size: Arial;
+    }
+    .wain{
+        max-width: 1000px;
+        margin: auto;
+    }
+    .h1{
+        font-size: 50px;
+        word-break: break-all;
+    }
+    .row{
+        margin: 8px -16px;
+    }
+    .row
+    .row>.column{
+        padding: 8px;
+    }
+    .row::after{
+        content: "";
+        display: table;
+        clear: both;
+
+    }
     .column{
         float: left;
         width: 25%
@@ -28,8 +44,24 @@
 
     @media screen and (max-width:600px){
         .column{
-            width:50px;
+            width:100px;
         }
+    }
+    .content{
+        background-color: white;
+        padding: 10px;
     }
 
 </style>
+
+</head>
+
+<body>
+    <h1 style="color: blue;">PORTIFOLIO</h1>
+
+    <h3>João Pedro Ferreira de Souza.</h3>
+    <h3>Estudante de Engenharia de Software</h3>
+
+</body>
+
+</html>
