--- a/PortifolioEntrada.html
+++ b/PortifolioEntrada.html
@@ -5,6 +5,9 @@
 <head>
     <title>Portifolio Proficional</title>
 <style>
+    *{
+        box-sizing: border-box;
+    }
     .body{
         background-color: rgb(245, 136, 47);
         padding: 20px;
@@ -63,5 +66,4 @@
     <h3>Estudante de Engenharia de Software</h3>
 
 </body>
-
 </html>
