imagem com texto

--- a/PortifolioEntrada.html
+++ b/PortifolioEntrada.html
@@ -56,14 +56,32 @@
     }
 
 </style>
-
 </head>
 
 <body>
-    <h1 style="color: blue;">PORTIFOLIO</h1>
+    <div class="main">
+        <h1>PORTIFOLIO</h1>
+        <hr />
+    <h2>João Pedro Ferreira de Souza.</h3>
+    <p>Estudante de Engenharia de Software IFPR, programador na NextAge, Desenvolvedor do projeto Centralizador da Viasoft</p>
+    <p>Contato:
+        <br> Email: jpfsouza99@gmail.com ou jpfsouza99.nextage@gmail.com
+        <br>
+        <br>Discord: souza99#1301
+    </p>
+    </div>
 
-    <h3>João Pedro Ferreira de Souza.</h3>
-    <h3>Estudante de Engenharia de Software</h3>
+    <div class="row">
+        <div class="column">
+        <div class="content">
+            <img src="imagem/viasoft.png" alt="Tela de login" style="width: 100%;">
+            <h3>Viasoft</h3>
+            <p>A pagina de login em questão é do portal de serviços, onde é feito a validação do CPF/CNPJ do usuário e suas credenciais no portal para acesso as informações</p>
+            <p>A validação ocorre por meio do CPF/CNPJ cadastrado no banco junto com a senha, caso não lembre sua senha, é possivel fazer a recuperação com uma nova senha</p>
+        </div>
+        </div>
+    </div>
+    
 
 </body>
 </html>
