adicionando descrição das paginas

--- a/PortifolioEntrada.html
+++ b/PortifolioEntrada.html
@@ -76,8 +76,28 @@
         <div class="content">
             <img src="imagem/viasoft.png" alt="Tela de login" style="width: 100%;">
             <h3>Viasoft</h3>
-            <p>A pagina de login em questão é do portal de serviços, onde é feito a validação do CPF/CNPJ do usuário e suas credenciais no portal para acesso as informações</p>
+            <p>A pagina de login em questão(imagem da foto), é do portal de serviços, onde é feito a validação do CPF/CNPJ do usuário e suas credenciais no portal para acesso as informações</p>
             <p>A validação ocorre por meio do CPF/CNPJ cadastrado no banco junto com a senha, caso não lembre sua senha, é possivel fazer a recuperação com uma nova senha</p>
+        </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="column">
+        <div class="content">
+            <img src="imagem/viasoft2.png" alt="Tela de cadastro" style="width: 100%;">
+            <h3>Viasoft</h3>
+            <p>A pagina de cadastro(imagem da foto), é o local do portal de serviços onde o administrador da empresa pode cadastrar novos serviços, áreas de negócio e novos consultores da empresa</p>
+        </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="column">
+        <div class="content">
+            <img src="imagem/viasoft3.png" alt="Tela de serviços" style="width: 100%;">
+            <h3>Viasoft</h3>
+            <p>A pagina em questão é a pagina de listagem de serviços com listagem por pesquisa e serviços em geral, com paginação de 10 serviços por página com númeração</p>
         </div>
         </div>
     </div>
