--- a/PortifolioEntrada.html
+++ b/PortifolioEntrada.html
@@ -1,107 +1,63 @@
 <!DOCTYPE html>
-<html>
-    <meta name="viewport" content="width-device-width, initial-scale-1.0">
+<html lang="en">
 
 <head>
+    <meta name="viewport" content="width-device-width, initial-scale-1.0">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="cores.scss">
     <title>Portifolio Proficional</title>
-<style>
-    *{
-        box-sizing: border-box;
-    }
-    .body{
-        background-color: rgb(245, 136, 47);
-        padding: 20px;
-        font-size: Arial;
-    }
-    .wain{
-        max-width: 1000px;
-        margin: auto;
-    }
-    .h1{
-        font-size: 50px;
-        word-break: break-all;
-    }
-    .row{
-        margin: 8px -16px;
-    }
-    .row
-    .row>.column{
-        padding: 8px;
-    }
-    .row::after{
-        content: "";
-        display: table;
-        clear: both;
-
-    }
-    .column{
-        float: left;
-        width: 25%
-    }
-
-    @media screen and (max-width:900px){
-        .column{
-            width:50px;
-        }
-    }
-
-    @media screen and (max-width:600px){
-        .column{
-            width:100px;
-        }
-    }
-    .content{
-        background-color: white;
-        padding: 10px;
-    }
-
-</style>
 </head>
 
 <body>
     <div class="main">
         <h1>PORTIFOLIO</h1>
         <hr />
-    <h2>João Pedro Ferreira de Souza.</h3>
-    <p>Estudante de Engenharia de Software IFPR, programador na NextAge, Desenvolvedor do projeto Centralizador da Viasoft</p>
-    <p>Contato:
-        <br> Email: jpfsouza99@gmail.com ou jpfsouza99.nextage@gmail.com
-        <br>
-        <br>Discord: souza99#1301
-    </p>
+        <h2>João Pedro Ferreira de Souza.</h3>
+            <p>Estudante de Engenharia de Software IFPR, programador na NextAge, Desenvolvedor do projeto Centralizador
+                da Viasoft</p>
+            <p>Contato:
+                <br> Email: jpfsouza99@gmail.com ou jpfsouza99.nextage@gmail.com
+                <br>
+                <br>Discord: souza99#1301
+            </p>
     </div>
 
     <div class="row">
         <div class="column">
-        <div class="content">
-            <img src="imagem/viasoft.png" alt="Tela de login" style="width: 100%;">
-            <h3>Viasoft</h3>
-            <p>A pagina de login em questão(imagem da foto), é do portal de serviços, onde é feito a validação do CPF/CNPJ do usuário e suas credenciais no portal para acesso as informações</p>
-            <p>A validação ocorre por meio do CPF/CNPJ cadastrado no banco junto com a senha, caso não lembre sua senha, é possivel fazer a recuperação com uma nova senha</p>
-        </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="column">
-        <div class="content">
-            <img src="imagem/viasoft2.png" alt="Tela de cadastro" style="width: 100%;">
-            <h3>Viasoft</h3>
-            <p>A pagina de cadastro(imagem da foto), é o local do portal de serviços onde o administrador da empresa pode cadastrar novos serviços, áreas de negócio e novos consultores da empresa</p>
-        </div>
+            <div class="content">
+                <img src="imagem/viasoft.png" alt="Tela de login" style="width: 100%;">
+                <h3>Viasoft</h3>
+                <p>A pagina de login em questão(imagem da foto), é do portal de serviços, onde é feito a validação do
+                    CPF/CNPJ do usuário e suas credenciais no portal para acesso as informações</p>
+                <p>A validação ocorre por meio do CPF/CNPJ cadastrado no banco junto com a senha, caso não lembre sua
+                    senha, é possivel fazer a recuperação com uma nova senha</p>
+            </div>
         </div>
     </div>
 
     <div class="row">
         <div class="column">
-        <div class="content">
-            <img src="imagem/viasoft3.png" alt="Tela de serviços" style="width: 100%;">
-            <h3>Viasoft</h3>
-            <p>A pagina em questão é a pagina de listagem de serviços com listagem por pesquisa e serviços em geral, com paginação de 10 serviços por página com númeração</p>
-        </div>
+            <div class="content">
+                <img src="imagem/viasoft2.png" alt="Tela de cadastro" style="width: 100%;">
+                <h3>Viasoft</h3>
+                <p>A pagina de cadastro(imagem da foto), é o local do portal de serviços onde o administrador da empresa
+                    pode cadastrar novos serviços, áreas de negócio e novos consultores da empresa</p>
+            </div>
         </div>
     </div>
-    
+
+    <div class="row">
+        <div class="column">
+            <div class="content">
+                <img src="imagem/viasoft3.png" alt="Tela de serviços" style="width: 100%;">
+                <h3>Viasoft</h3>
+                <p>A pagina em questão é a pagina de listagem de serviços com listagem por pesquisa e serviços em geral,
+                    com paginação de 10 serviços por página com númeração</p>
+            </div>
+        </div>
+    </div>
+
 
 </body>
+
 </html>
